@@ -23,6 +23,8 @@
 
 /* ------------------------------------------------------------------------- */
 
+#if !PANGO_CHECK_VERSION (1, 19, 0) /* FIXME: 1.20 */
+
 static gpointer
 gtk2perl_pango_layout_iter_copy (gpointer boxed)
 {
@@ -30,13 +32,19 @@ gtk2perl_pango_layout_iter_copy (gpointer boxed)
 	return boxed;
 }
 
+#endif
+
 GType
 gtk2perl_pango_layout_iter_get_type (void)
 {
 	static GType t = 0;
 	if (!t)
 		t = g_boxed_type_register_static ("PangoLayoutIter",
+#if PANGO_CHECK_VERSION (1, 19, 0) /* FIXME: 1.20 */
+		      (GBoxedCopyFunc) pango_layout_iter_copy,
+#else
 		      (GBoxedCopyFunc) gtk2perl_pango_layout_iter_copy,
+#endif
 		      (GBoxedFreeFunc) pango_layout_iter_free);
 	return t;
 }
@@ -691,3 +699,9 @@ void pango_layout_iter_get_line_yrange (PangoLayoutIter *iter, OUTLIST int y0_, 
 int
 pango_layout_iter_get_baseline (iter)
 	PangoLayoutIter *iter
+
+#if PANGO_CHECK_VERSION (1, 19, 0) /* FIXME: 1.20 */
+
+PangoLayout * pango_layout_iter_get_layout (PangoLayoutIter *iter);
+
+#endif
